--- a/06-network-types.qmd
+++ b/06-network-types.qmd
@@ -1,9 +1,7 @@
 ---
-title: "Representing networks in R"
+title: "Different Types of Networks"
 editor: visual
 ---
-
-# Types of networks
 
 Networks can be categorized in various ways depending on their characteristics. We will cover three types of networks here: *directed* and *undirected* networks, *weighted* and *unweighted* networks, and *unipartite* and *bipartite* networks.
 
@@ -59,7 +57,7 @@ Since this function returns a symmetrized adjacency matrix, we also need to reco
 net_sym <- network(adj_sym, directed=FALSE)
 ```
 
-### Ploting directed and undirected networks
+### Plotting directed and undirected networks
 
 Directed edges are usually represented by arrows in a network plot. If we pass a directed network to `gplot(...)`, this is the default (because the default value of the `gmode` argument is `digraph`):
 
